@@ -1,5 +1,6 @@
 === (ongoing) ===
 
+- fixed average calculation for 0 values
 
 === 1.6 ===
 
